--- a/Zara/bootstrap/index.html
+++ b/Zara/bootstrap/index.html
@@ -116,8 +116,7 @@
 
         <div class="product-card">
           <div class="product-image-wrapper">
-            <img class="product-image" src="https://source.unsplash.com/random/400x400/?clothes&unique1"
-              alt="Basic Tee 8-pack" class="product-image">
+            <img class="product-image" src="https://source.unsplash.com/random/400x400/?clothes&unique1" alt="Basic Tee 8-pack">
           </div>
 
           <div class="product-content">
