--- a/Zara/bootstrap/Carrinho/index.html
+++ b/Zara/bootstrap/Carrinho/index.html
@@ -59,44 +59,61 @@
     </div>
   </nav>
 
-  <div class="content">
+  <div class="content container-fluid">
     <div class="form-container">
       <h3>Carrinho</h3>
 
       <form id="cartForm">
-        <input type="text" id="name" placeholder="Nome">
-        <input type="email" id="email" placeholder="Email">
-        <button id="saveButton" type="submit">Salvar</button>
+        <div class="form-floating mb-3">
+          <input type="text" id="name" placeholder="Nome" class="form-control">
+          <label for="name">Nome</label>
+        </div>
+        <div class="form-floating mb-2">
+          <input type="email" id="email" placeholder="Email" class="form-control" required>
+          <label for="email" class="form-label">Email</label>
+        </div>
+        <button id="saveButton" type="submit" class="btn btn-dark">Salvar</button>
       </form>
     </div>
 
     <div id="userInfo" class="hide"></div>
 
-    <div class="products">
-      <div class="product">
-        <span>Item 1</span>
-        <span class="price">R$ 10,00</span>
-        <button class="add-to-cart" onclick="adicionarAoCarrinho('Item 1', 10)" disabled>Adicionar ao Carrinho</button>
+    <div class="container-fluid d-flex p-5" style="gap: 30px;">
+
+      <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h5 class="card-title">Item 1</h5>
+          <p class="card-text">R$ 10,00</p>
+          <button class="btn btn-dark" onclick="adicionarAoCarrinho('Item 1', 10)" disabled>Adicionar ao Carrinho</button>
+        </div>
       </div>
-      <div class="product">
-        <span>Item 2</span>
-        <span class="price">R$ 20,00</span>
-        <button class="add-to-cart" onclick="adicionarAoCarrinho('Item 2', 20)" disabled>Adicionar ao Carrinho</button>
+      <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h5 class="card-title">Item 2</h5>
+          <p class="card-text">R$ 20,00</p>
+          <button class="btn btn-dark" onclick="adicionarAoCarrinho('Item 2', 20)" disabled>Adicionar ao Carrinho</button>
+        </div>
       </div>
-      <div class="product">
-        <span>Item 3</span>
-        <span class="price">R$ 30,00</span>
-        <button class="add-to-cart" onclick="adicionarAoCarrinho('Item 3', 30)" disabled>Adicionar ao Carrinho</button>
+      <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h5 class="card-title">Item 3</h5>
+          <p class="card-text">R$ 30,00</p>
+          <button class="btn btn-dark" onclick="adicionarAoCarrinho('Item 3', 30)" disabled>Adicionar ao Carrinho</button>
+        </div>
       </div>
-      <div class="product">
-        <span>Item 4</span>
-        <span class="price">R$ 27,37</span>
-        <button class="add-to-cart" onclick="adicionarAoCarrinho('Item 4', 27.37)" disabled>Adicionar ao Carrinho</button>
+      <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h5 class="card-title">Item 4</h5>
+          <p class="card-text">R$ 27,37</p>
+          <button class="btn btn-dark" onclick="adicionarAoCarrinho('Item 4', 27.37)" disabled>Adicionar ao Carrinho</button>
+        </div>
       </div>
-      <div class="product">
-        <span>Item 5</span>
-        <span class="price">R$ 399,80</span>
-        <button class="add-to-cart" onclick="adicionarAoCarrinho('Item 5', 399.80)" disabled>Adicionar ao Carrinho</button>
+      <div class="card" style="width: 18rem; height: 10rem;">
+        <div class="card-body" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h5 class="card-title">Item 5</h5>
+          <p class="card-text">R$ 399,80</p>
+          <button class="btn btn-dark" onclick="adicionarAoCarrinho('Item 5', 399.80)" disabled>Adicionar ao Carrinho</button>
+        </div>
       </div>
     </div>
 
