--- a/Zara/bootstrap/Carrinho/index.html
+++ b/Zara/bootstrap/Carrinho/index.html
@@ -120,7 +120,7 @@
     <div id="cart">
       <h2>Carrinho</h2>
       <ul id="cartItems"></ul>
-      <p>Total: R$ <span id="totalPrice">0,00</span></p>
+      <p style="font-size: 20px; font-weight: 400;">Total: <span id="totalPrice">0,00</span></p>
     </div>
   </div>
   
