--- a/ZARA-GILBERT/index.html
+++ b/ZARA-GILBERT/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/bf7e05c402.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/images.png" type="image/x-icon">
@@ -31,17 +33,15 @@
     <nav>
       <a href="#" class="active">home</a>
       <div class="dropdown">
-        <button class="dropdown-toggle" type="button">
+        <button class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" type="button">
           collections
-          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M6.175 7.15L10 10.975L13.825 7.15L15 8.33333L10 13.3333L5 8.33333L6.175 7.15Z" fill="#3C3A36" />
-          </svg>
-        </button>
-        <!-- <div class="dropdown-menu">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div> -->
+        </button> 
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Link 1</a></li>
+          <li><a class="dropdown-item" href="#">Link 2</a></li>
+          <li><a class="dropdown-item" href="#">Link 3</a></li>
+        </ul>
+
       </div>
       <a href="#">about</a>
       <a href="#">contact</a>
@@ -59,7 +59,7 @@
   </div>
 
 
-  <main>
+  <main class="container-xxl">
     <div class="entrada">
 
       <div class="imagem-inicial">
@@ -366,7 +366,7 @@
       </div>
     </section>
   </main>
-  <footer> 
+  <footer class="footer" > 
     <div class="footer-ctt">
         <h4>Contato</h4>
         <p>Email: <a href="gabrielcirqueira711@gmail.com">gabrielcirqueira711@gmail.com</a></p>
@@ -380,8 +380,10 @@
     </div>
     <p>&copy; 2024 MS - CODE. Todos os direitos reservados.</p>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="script/script.js"></script>
+
+
 </body>
 
 </html>
